--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: remind_task
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -28,8 +28,12 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  bloc: ^9.0.0
   cupertino_icons: ^1.0.8
   dartz: ^0.10.1
+  easy_date_timeline: ^2.0.9
+  firebase_auth: ^6.0.2
+  firebase_core: ^4.1.0
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.1
@@ -38,6 +42,8 @@ dependencies:
   freezed_annotation: ^3.1.0
   get: ^4.7.2
   google_fonts: ^6.2.1
+  google_sign_in: ^7.1.1
+  http: ^1.5.0
   intl: ^0.20.2
   loading_animation_widget: ^1.3.0
   mobkit_dashed_border: ^0.0.8
@@ -56,7 +62,6 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
